--- a/workflow/resources/multiqc.yaml
+++ b/workflow/resources/multiqc.yaml
@@ -6,3 +6,9 @@ fn_clean_exts:
   - ".samtools_stats"
   - ".txt"
   - ".vcf"
+
+prepend_dirs_sep: "/"
+
+extra_fn_clean_exts:
+  - type: remove
+    pattern: stats
