fix: added outputs of reads module

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -39,6 +39,7 @@ include: "rules/summary.smk"
 rule all:
     input:
         **mapping_workflow.get_outputs(),
+        **mapping_workflow.reads_workflow.get_outputs(),
         **get_outputs(),
         **get_standalone_outputs(),
     default_target: True
@@ -48,4 +49,4 @@ rule all:
 onstart:
     if extra := get_all_relevant_extra_params():
         logger.info("Variants module - extra parameters parsed from config:")
-        logger.info(get_all_relevant_extra_params())
+        logger.info(extra)
