--- a/workflow/resources/multiqc.yaml
+++ b/workflow/resources/multiqc.yaml
@@ -12,6 +12,9 @@ run_modules:
   - samtools
   - bcftools
 
+kraken:
+  top_n: 10
+
 module_order:
   - fastqc:
       name: "FastQC - original"
@@ -71,13 +74,14 @@ module_order:
   - bcftools:
       name: "BCFtools"
       target: "BCFtools"
-      anchor: "bcftools"
+      anchor: "bcftools_stats"
 
 fn_clean_exts:
   - ".kreport2"
   - "_R1.fastq.gz"
   - "_R2.fastq.gz"
   - ".samtools_stats"
+  - ".vcf"
 
 extra_fn_clean_exts:
   - type: remove
@@ -116,10 +120,17 @@ extra_fn_clean_exts:
       - qualimap
       - samtools_stats
       - picard_deduplication
+  - type: regex_keep
+    pattern: "([^\/]*)\/stats\/([^\/]*)"
+    module:
+      - bcftools_stats
+  - type: remove
+    pattern: "stats/"
+    module: bcftools_stats
 
 table_columns_visible:
   "FastQC - original":
-    percent_duplicates: True
+    percent_duplicates: False
     percent_gc: False
     avg_sequence_length: False
     median_sequence_length: False
@@ -132,23 +143,21 @@ table_columns_visible:
   "Cutadapt - trimming":
     percent_trimmed: True
   "Species Diversity": False
-  Samtools (?):
-    flagstat_total: False
-    mapped_passed: False
   Qualimap:
-    avg_gc: False
-    median_insert_size: False
-    1_x_pc: False
-    5_x_pc: False
-    10_x_pc: True
-    30_x_pc: True
-    50_x_pc: False
+    total_reads: True
+    percentage_aligned: True
     median_coverage: True
     mean_coverage: True
+    10_x_pc: True
+    30_x_pc: True
+    avg_gc: False
+    median_insert_size: True
+    1_x_pc: False
+    5_x_pc: False
+    50_x_pc: False
     general_error_rate: False
-    percentage_aligned: True
     mapped_reads: False
-    total_reads: False
+  Samtools (?): False
 
 read_count_multiplier: 0.001
 read_count_prefix: "K"
